--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GATABOT",
+  "name": "CRAZYBOT",
   "version": "10.8.9",
   "description": "Subscribete a The Shadow Borkers - Bot (≧▽≦)",
   "depecrated": false,
